# nes_emulator

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt  cpu.h  disassembler.cpp  disassembler.h  main.cpp  opcode.cpp  opcode.h
src/emu/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  bus.cpp  bus.h  cartridge.cpp  cartridge.h  common.h  cpu.cpp  cpu.h  disassembler.cpp  disassembler.h  opcode.cpp  opcode.h
src/tests/: CMakeLists.txt  test.cpp
vendors/: CMakeLists.txt
